# MEMU

./: .#README.md  .gitignore  CMakeLists.txt  LICENSE.txt  README.md
docs/: index.html  memu.css
run_time/: alt_keypad.kbd  andy_sys.mfloppy  memu.cfg  memu0.cfg
run_time/disks/: andy_sys.mfloppy  games.mfloppy
run_time/roms/: CFX-II.rom  CFX.rom  CFX2.rom  boot-type07.rom  mfx.rom  pascal0.rom  pascal1.rom  sdx-type07.rom
run_time/tapes/: Memotech Demo 1 of 3 (198x).mtx  Memotech Demo 3 of 3 (198x).mtx  Toado (1984) (Continental Software).mtx
sd_card/: memu.cfg  memu0.cfg
sd_card/disks/: games.mfloppy
sd_card/tapes/: Memotech Demo 2 of 3 (198x).mtx  Memotech ROM Demo (198x) (Continental Software).mtx
src/: CMakeLists.txt
src/Z80/: CMakeLists.txt  Codes.h  CodesED.h  CodesXX.h  LICENSE.txt  Tables.h  Z80.c  Z80.h
src/circle/: CMakeLists.txt  diskio_cir.cpp  kernel.cpp  kernel.h  keyeventbuffer.cpp  keyeventbuffer.h  main_cir.cpp
src/circle/include/: ctype.h  errno.h  fcntl.h  math.h  stdarg.h  stdio.h  stdlib.h  string.h  termios.h  time.h  unistd.h
src/circle/include/sys/: stat.h  types.h
src/fatfs/: CMakeLists.txt
src/launch/: Launch.pyw
src/memu/: 80col_pico.c  80col_pico.h  CMakeLists.txt  TxtRead.c  TxtRead.h  cbool.h  cfgwin.c  cfgwin.h  cfgwin_pico.c  cfx.c  cfx.h  cfx2.c  cfx2.h  circleio.cpp  common.c  common.h  config.c  config.h  console.h  console_cir.cpp  console_pico.c  cpm.c  cpm.h  crc7.h  ctc.c  ctc.h  dart.c  dart.h  diag.c  diag.h  diff.sh  diff.txt  dirmap.c  dirmap.h  dirt.h  dirt_ff.c  dirt_unix.c  dirt_w32.c  dis.c  dis.h  (+84 more)
